--- a/hospital-esf.html
+++ b/hospital-esf.html
@@ -40,7 +40,7 @@
                     <li><a href="index.html">صفحه اصلی</a></li>
                     <li><a href="hospital-esf.html">بیمارستان های اصفهان</a></li>
                     <li><a href="darokhane.html">داروخانه های اصفهان</a></li>
-                    <li><a id="about" href="#about">درباره ما</a></li>
+                    <li><a id="about" href="index.html">درباره ما</a></li>
                 </ul>
             </nav>
             <div class="nav-button">
