--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <hr>
     </main>
     <footer>
-        <p>powered by emir-ghazi</p>
+        <p>ساخته شده توسط امیر حسین قاضی</p>
     </footer>
 </body>
 <script src="script/numberId.js"></script>
